@@ -91,6 +91,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\Test\$(ConfigurationName)&quot;&#x0D;&#x0A;copy &quot;$(ProjectDir)\..\SDL-1.2.14\VisualC\SDL\Debug\SDL.dll&quot; &quot;$(SolutionDir)\Test\$(ConfigurationName)&quot;"
 			/>
 		</Configuration>
 		<Configuration
@@ -234,6 +235,18 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 		</Filter>
+		<File
+			RelativePath=".\ChangeLog"
+			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				ExcludedFromBuild="true"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+				/>
+			</FileConfiguration>
+		</File>
 		<File
 			RelativePath=".\README"
 			>
